--- a/styles/global.css
+++ b/styles/global.css
@@ -8,7 +8,7 @@ body {
   font-size: 18px;
 
 
-background-color: white;
+background-color: rgba(7, 7, 7, 0.623);
 }
 
 * {
@@ -28,3 +28,4 @@ img {
   max-width: 100%;
   display: block;
 }
+
